force-app/main/default/objects/Sellout_Report__c/Sellout_Report__c.object-meta.xml
<CustomObject>
    <label>Sellout Report</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Sellout Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sellout Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>