force-app/main/default/objects/Sellout_Report__c/fields/Ach__c.field-meta.xml
<CustomField>
    <fullName>Ach__c</fullName>
    <formula>IF( Target__c == 0 , null, Amount__c / Target__c)</formula>
    <label>Ach.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>