force-app/main/default/objects/Sellout_Report__c/fields/Amount_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Amount_Last_Month__c</fullName>
    <label>Amount Last Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>