force-app/main/default/objects/Sellout_Report__c/fields/Growth__c.field-meta.xml
<CustomField>
    <fullName>Growth__c</fullName>
    <formula>IF( Amount_Last_Month__c == 0 , null,  (Amount__c -  Amount_Last_Month__c)/ Amount_Last_Month__c  )</formula>
    <label>Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>