force-app/main/default/objects/Sellout_Report__c/fields/Refrigerator_Daily__c.field-meta.xml
<CustomField>
    <fullName>Refrigerator_Daily__c</fullName>
    <label>Refrigerator Daily</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>