force-app/main/default/objects/Sellout_Report__c/fields/Refrigerator_Key_Model__c.field-meta.xml
<CustomField>
    <fullName>Refrigerator_Key_Model__c</fullName>
    <label>Refrigerator Key Model</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>