force-app/main/default/objects/Sellout_Report__c/fields/Refrigerator_MTD__c.field-meta.xml
<CustomField>
    <fullName>Refrigerator_MTD__c</fullName>
    <label>Refrigerator MTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>