force-app/main/default/objects/Sellout_Report__c/fields/Total_Daily__c.field-meta.xml
<CustomField>
    <fullName>Total_Daily__c</fullName>
    <formula>TV_Daily__c +  Refrigerator_Daily__c +  WM_Daily__c  +  AC_Daily__c</formula>
    <label>Total Daily</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>