force-app/main/default/objects/Sellout_Report__c/fields/Total_MTD__c.field-meta.xml
<CustomField>
    <fullName>Total_MTD__c</fullName>
    <formula>TV_MTD__c + Refrigerator_MTD__c +  WM_MTD__c +  AC_MTD__c</formula>
    <label>Total MTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>