force-app/main/default/objects/Sellout_Report__c/fields/TV_Daily__c.field-meta.xml
<CustomField>
    <fullName>TV_Daily__c</fullName>
    <label>TV Daily</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>