force-app/main/default/objects/Sellout_Report__c/fields/TV_Key_Mode__c.field-meta.xml
<CustomField>
    <fullName>TV_Key_Mode__c</fullName>
    <label>TV Key Mode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>