force-app/main/default/objects/Sellout_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Report_Date__c</columns>
    <columns>User__c</columns>
    <columns>Target__c</columns>
    <columns>Amount__c</columns>
    <columns>Ach__c</columns>
    <columns>TV_MTD__c</columns>
    <columns>TV_Daily__c</columns>
    <columns>TV_Key_Mode__c</columns>
    <columns>Refrigerator_MTD__c</columns>
    <columns>Refrigerator_Daily__c</columns>
    <columns>Refrigerator_Key_Model__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>